correcting headers issue for visual studio higher than 2015

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,16 @@
+**/.vscode/*
+**/bin/*
+**/build/*
+**/idb/*
+**/srv/*
+**/obj/*
 *.csproj
 *.db
 *.user
-**/.vscode/*
 *.code-workspace
 *.exe
 *.elf
 *.idb
-**/idb/*
 *.bat
 *.bt
 *.json
